--- a/TodayDo/TodayDo.xcodeproj/xcshareddata/xcschemes/TodayDo.xcscheme
+++ b/TodayDo/TodayDo.xcodeproj/xcshareddata/xcschemes/TodayDo.xcscheme
@@ -29,6 +29,16 @@
       language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "03B8723720188448006BDD6E"
+               BuildableName = "TodayDoUITests.xctest"
+               BlueprintName = "TodayDoUITests"
+               ReferencedContainer = "container:TodayDo.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
